syntax = "proto3";
option go_package = "github.com/shaunnope/go-jaguard/zouk";

message Zxid {
    int64 epoch = 1;
    int64 counter = 2;
}

message Ping {
    int64 from = 1;
}

// dynamic zookeeper nodes
message AddNodeRequest {
    string server = 1;
}

message AddNodeResponse {}

message RemoveNodeRequest {
    string server = 1;
}

message RemoveNodeResponse {}
// end dynamic zookeeper nodes

// election
message Vote {
    Zxid lastZxid = 1;
    int64 id = 2;
}

message ElectNotification {
    Vote vote = 1;
    int64 id = 2;
    int64 state = 3;
    int64 round = 4;
}

message ElectResponse {
    int64 state = 1;
}
// end election


message CreateRequest {
    string path = 1;
    bytes data = 2;
    string flags = 3;
    RequestType requestType = 4;
}

message CreateResponse {
    optional bool accept = 1;
    optional CreateRequest CR = 2;
}

enum RequestType{
    PROPOSAL = 0;
    ANNOUNCEMENT = 1;
    CLIENT = 3;
}


enum Event {
    CONNECTED = 0;
    DISCONNECTED = 1;
    CONNECTION_LOST = 2;
    SESSION_EXPIRED = 3;
    AUTH_FAILED = 4;
    CLOSE = 5;
}


service Node {
    rpc SendPing (Ping) returns (Ping);

    rpc AddNode (AddNodeRequest) returns (AddNodeResponse);
    rpc RemoveNode (RemoveNodeRequest) returns (RemoveNodeResponse);

    rpc Elect (ElectNotification) returns (ElectResponse);
    
    rpc Create(CreateRequest) returns (CreateResponse);
}